add admin skill control
Took 11 minutes
